--- a/ecommerce-backend/pom.xml
+++ b/ecommerce-backend/pom.xml
@@ -85,10 +85,12 @@
 			<version>2.3.0</version>
 		</dependency>
 
+		<!-- Source: https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
 		<dependency>
-			<groupId>me.paulschwarz</groupId>
-			<artifactId>spring-dotenv</artifactId>
-			<version>4.0.0</version>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>5.2.2</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<!-- Test -->
