--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.8'
-
 services:
+
   postgres:
     image: postgres:15
     container_name: ecommerce-postgres
+    restart: unless-stopped
     environment:
       POSTGRES_DB: ecommerce-db
       POSTGRES_USER: postgres
@@ -15,11 +15,16 @@ services:
     networks:
       - ecommerce-network
 
+
   backend:
-    build: ./ecommerce-backend
+    build:
+      context: ./ecommerce-backend
     container_name: ecommerce-backend
+    restart: unless-stopped
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ecommerce
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ecommerce-db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
       SPRING_PROFILES_ACTIVE: docker
     ports:
       - "8080:8080"
@@ -27,6 +32,20 @@ services:
       - postgres
     networks:
       - ecommerce-network
+
+
+  frontend:
+    build:
+      context: ./ecommerce-frontend
+    container_name: ecommerce-frontend
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    networks:
+      - ecommerce-network
+
 
 volumes:
   postgres_data:
